syntax = "proto3";

package proto;

option go_package = "../pb";

import "message.proto";

message ObjectData {
  string fileName = 1;
  string originLocate = 2;
  bytes data = 3;
}

message RequiredInfo {
  int64 averageCap = 1;
  int64 requiredSize = 2;
  string targetAddress = 3;
}

service ObjectMigration {
  rpc ReceiveObject(stream ObjectData) returns (stream Response);
  rpc RequireSend(RequiredInfo) returns (Response);
  rpc LeaveCommand(EmptyReq) returns (Response);
  rpc JoinCommand(EmptyReq) returns (Response);
}